[PLAT-4447][Platform][UI] Error message alignment issue
Summary:
  # Fixed issue with error message. Printed it in separate row
  # Don't allow "/login" route to be assigned to redirectUrl ( results in multiple login )

Test Plan:
Tested manually

{F27368}

Reviewers: kkannan, cpadinjareveettil, ssutar, mjoshi, lsangappa

Reviewed By: lsangappa

Subscribers: jenkins-bot, ui, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D18414

--- a/managed/ui/src/components/universes/UniverseForm/UniverseForm.scss
+++ b/managed/ui/src/components/universes/UniverseForm/UniverseForm.scss
@@ -214,6 +214,11 @@
     align-items: center;
     width: 100%;
   }
+
+  .volume-type-row {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .az-table-container {
